kustomize-ng/base/admin-ui/resources.yaml
---
# Source: identity-platform/templates/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  labels:
    helm.sh/chart: identity-platform-7.6
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: "7.6"
    app.kubernetes.io/managed-by: Helm
    app: admin-ui
    app.kubernetes.io/component: admin-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/instance: identity-platform
    app: admin-ui
    app.kubernetes.io/component: admin-ui
---
# Source: identity-platform/templates/admin-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  labels:
    helm.sh/chart: identity-platform-7.6
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: "7.6"
    app.kubernetes.io/managed-by: Helm
    app: admin-ui
    app.kubernetes.io/component: admin-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: identity-platform
      app.kubernetes.io/instance: identity-platform
      app: admin-ui
      app.kubernetes.io/component: admin-ui
  template:
    metadata:
      annotations:
        deployment-date: "2024-05-21 07:50:45.059939 -0500 CDT m=+0.093504085"
      labels:
        app.kubernetes.io/name: identity-platform
        app.kubernetes.io/instance: identity-platform
        app: admin-ui
        app.kubernetes.io/component: admin-ui
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: admin-ui
          securityContext:
            {}
          image: "gcr.io/forgerock-io/platform-admin-ui/docker-build:7.6.0-SNAPSHOT-postcommit-latest"
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/nginx", "-s", "quit"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            exec:
              command: ['true']
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            {}
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Exists
---
# Source: identity-platform/templates/admin-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ui
  labels:
    helm.sh/chart: identity-platform-7.6
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: "7.6"
    app.kubernetes.io/managed-by: Helm
    app: admin-ui
    app.kubernetes.io/component: admin-ui
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/body-size: 64m
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "identity-platform.domain.local"
      secretName: "tls-identity-platform.domain.local"
  rules:
    - host: "identity-platform.domain.local"
      http:
        paths:
          - path: /platform
            pathType: Prefix
            backend:
              service:
                name: admin-ui
                port:
                  number: 8080
